chore(info): complete account page

--- a/_infos/2022-10-06-account.md
+++ b/_infos/2022-10-06-account.md
@@ -2,21 +2,47 @@
 layout: post
 title: 匯款資訊
 description: 
-image: assets/images/pic06.jpg
+image: 
 ---
 
-Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. 
-Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. 
-Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.
+### 以下退款規定關於您的權益，為避免誤解與糾紛，請您充分了解並同意後再進行訂房  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. 
-Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. 
-Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. 
-Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. 
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. 
-Pellentesque aliquam maximus risus, vel sed vehicula.
+#### 【訂房程序】   
+1. 請利用房型展示線上訂房查看空房位後，傳line或是fb傳訊預訂 【FB 搜尋:密式旅行、line搜尋:電話號碼0905108958】
+3. 傳訊預訂完成後，請於系統指定時間內匯款並用信件回報匯款，若於保留時間內未收到匯款訂金則將取消訂房，並且不另行通知。
+4. 匯款後務必回報告知。
+5. 我們於收到訂金後，將為您保留房間，餘款到付。
+※如完成訂房，即表示以詳閱並願意遵守園內規約及其他各項規定，敬請遵守。
 
-Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. 
-Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.
+#### 【匯款資訊－ATM轉帳/匯款】  
+```
+※郵局代碼：700  
+※郵局帳號：0041703-0172216  
+※匯款郵局：楠梓亞洲城郵局  
+※匯款戶名：林季霆  
+※匯款後請務必來電、來信確認【電話：0905-108958】  
+```
+
+#### 【延期與退費說明】  
+
+- 訂金付款後若須退款，訂金須扣除「訂金扣款金額」與「單次退款手續費」，詳細計算方式如下：退款金額 = 訂金 x (1 - 訂金扣款百分比) - 單次退款手續費
+- 退款規定攸關您的權益，請務必了解並同意後再行訂房。
+- 凡遇颱風或豪大雨等，訂房一律取消，可選擇全額退費或是延期(六個月內)。
+- 若因個人因素延期須需於七天前告知(不含入住日)，超過七天才通知則依密式訂金退款準則辦理退款，不接受延期。
+- 於每週五中央氣象局公告泰安鄉降雨機率超過40%時草地營、木棧板、雨棚營位皆可無條件延期或退費。(木屋區不適用此退費標準)
+- 個人因素延期僅限一次，且無法再退費。
+
+#### 【訂金扣款百分比規定】  
+
+| 取消日 | 扣款比例 | 
+|:--------|:-------:|
+| 入住日當日   | 100%   |
+| 入住日前1天(含) ~ 前2天 (含)   | 80%   |
+| 入住日前3天(含)~前5天(含)   | 70%   |
+| 入住日前6天(含)~前8天(含)   | 60%   |
+| 入住日前9天(含)~前12天(含)   | 50%   |
+| 入住日前9天(含)~前12天(含)   | 30%   |
+| 入住日前14天(含)    | 0%   |
+
+**當天無法前來，訂金將無法保留及退款。**  
+**若您須要訂房或想進一步洽詢任何問題，請與『密式旅行』黃小姐聯繫，電話【0905-108958】。**
