chore(infopage): update account info page

--- a/_infos/2022-10-06-account.md
+++ b/_infos/2022-10-06-account.md
@@ -9,10 +9,10 @@ image:
 
 #### 【訂房程序】   
 1. 請利用房型展示線上訂房查看空房位後，傳line或是fb傳訊預訂 【FB 搜尋:密式旅行、line搜尋:電話號碼0905108958】
-3. 傳訊預訂完成後，請於系統指定時間內匯款並用信件回報匯款，若於保留時間內未收到匯款訂金則將取消訂房，並且不另行通知。
-4. 匯款後務必回報告知。
-5. 我們於收到訂金後，將為您保留房間，餘款到付。
-※如完成訂房，即表示以詳閱並願意遵守園內規約及其他各項規定，敬請遵守。
+2. 傳訊預訂完成後，請於系統指定時間內匯款並用信件回報匯款，若於保留時間內未收到匯款訂金則將取消訂房，並且不另行通知。
+3. 匯款後務必回報告知。
+4. 我們於收到訂金後，將為您保留房間，餘款到付。
+5. 如完成訂房，即表示以清楚並願意遵守園內規約及其他各項規定，敬請遵守。
 
 #### 【匯款資訊－ATM轉帳/匯款】  
 ```
