--- a/_infos/2022-10-06-roles.md
+++ b/_infos/2022-10-06-roles.md
@@ -2,21 +2,26 @@
 layout: post
 title: 園內規約
 description: 
-image: assets/images/pic06.jpg
+image:
 ---
+## 《如有違反本園區之規定事項，經管理人員制止不聽從者，得取消其場區使用資格，並勒令離場，如不同意請勿光臨 》
 
-Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. 
-Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. 
-Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. 
-Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. 
-Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. 
-Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. 
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. 
-Pellentesque aliquam maximus risus, vel sed vehicula.
-
-Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
-Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. 
-Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.
+- 木屋區嚴禁攜帶寵物，如欲攜帶寵物請預訂露營營位，如離開預訂區域未繫繩，另收清潔費100/隻
+- <span style="color:red">預訂木屋區違規攜帶寵物者，直接取消訂房、訂金不退還!!!</span>
+- 訪客每人酌收100元清潔費，不可抵園區消費，需於晚上8點前離開園區，如超過則需再加收每人100元共計200元的加人費。如未登記也未主動告知有訪客，事後被營主發現得勒令立即離場。
+- 木屋內禁止吸菸，炊煮食物，屢勸不聽者勒令離場並不退費。
+- 山上跳電維修不易，園區禁止使用發電機與高容量電器用品，如電磁爐、暖爐、電鍋、冰箱、烤箱、高分貝音響設備等，如未依照規定而使線路燒毀，需照價賠償。功率超過600W以上都算是高耗電設備
+- 紮營後離營者貴重物品請自行攜帶，園區不負保管責任。
+- 園區內火源嚴禁落地，如需烤肉者需離草地或板面至少30公分勿直接在草地以及木板營位上炊事及烤肉。若有草皮或木板毀損狀況，將酌收維護管理費，並且禁止燃放煙火、爆竹等危險物品。
+- 園區內禁唱卡拉OK，晚上10：00至清晨7：00，嚴禁大肆喧嘩。
+- 每年4-5月為螢火蟲出沒期，園區進行燈火管制，請配合管制燈火。
+- 每日22：00以後園區燈火管制(全營區公設熄燈)，若仍有活動請放輕聲響，避免影響他人。
+- 如遇氣候、天災等不可抗力因素影響，園區須緊急關閉暫停使用時，應遵守管理人員之通知，迅速離場。
+- 未經許可，請勿私自進入他人營位活動，或擅自進入未開發區。
+- 紮營時如有用到繩索綁置固定，請勿綁在營區周邊的植物、樹上，請將營釘固定在地面上。以免傷害植物。
+- 園區植物僅供觀賞用，請勿隨意摘取。
+- 請遵守園區規則，使用各項場地設備，如有違反規則致設備損壞者，按園區賠償規定處理。
+- 落實垃圾分類。務必依指示分類；廚餘及熱湯熱水請倒廚餘桶，切勿倒入水槽內或草皮上。
+- 請勿摘食未熟成及不明果實，並嚴禁浪費、外帶。
+- 若使用到任何園區內物品，麻煩使用後放置原位，嚴禁帶離園區。
+- 園區內有許多野生動植物，請注意有害昆蟲及動植物；園區內有許多高低不一之砌石駁坎，請家長注意年幼兒童或是高齡者之行動安全。
