chore(roomPage): adjust room page

--- a/_infos/2022-10-06-account.md
+++ b/_infos/2022-10-06-account.md
@@ -8,7 +8,7 @@ image:
 ### 以下退款規定關於您的權益，為避免誤解與糾紛，請您充分了解並同意後再進行訂房  
 
 #### 【訂房程序】   
-1. 請利用房型展示線上訂房查看空房位後，傳line或是fb傳訊預訂 【FB 搜尋:密式旅行、line搜尋:電話號碼0905108958】
+1. 請利用房型展示線上訂房查看空房位後，傳line或是fb傳訊預訂 【FB 搜尋:密式旅行、line搜尋:電話號碼 0905108958 】
 2. 傳訊預訂完成後，請於系統指定時間內匯款並用信件回報匯款，若於保留時間內未收到匯款訂金則將取消訂房，並且不另行通知。
 3. 匯款後務必回報告知。
 4. 我們於收到訂金後，將為您保留房間，餘款到付。
@@ -25,11 +25,12 @@ image:
 
 #### 【延期與退費說明】  
 
-- 訂金付款後若須退款，訂金須扣除「訂金扣款金額」與「單次退款手續費」，詳細計算方式如下：退款金額 = 訂金 x (1 - 訂金扣款百分比) - 單次退款手續費
+- 訂金付款後若須退款，訂金須扣除「訂金扣款金額」與「單次退款手續費」，詳細計算方式如下：退款金額 = 訂金 x (1 - 訂金扣款百分比) - 15
+- 十四天以上告知取消，會扣除單次退款手續費後全額退費
 - <span style="color:red">若因個人因素延期須需於七天前告知(不含入住日)，超過七天才通知則依密式訂金退款準則辦理退款，不接受延期</span>
 - 於每週五中央氣象局公告泰安鄉降雨機率超過 30% 時草地營、木棧板、雨棚營位皆可無條件延期或退費。(木屋區不適用此退費標準)
-- 個人因素延期僅限一次，且無法再退費。
-- 凡遇颱風或豪大雨等，訂房一律取消，可選擇全額退費或是延期(六個月內)。
+- 個人因素延期僅限一次，且無法再退費
+- 凡遇颱風或豪大雨等，訂房一律取消，可選擇全額退費或是延期(六個月內)
 - 颱風取消規範：發布台灣本島陸上警報，全區採退費取消或延期(休園)，發布台灣本島周圍海上警報，可自由選擇取消延期(不休園)，若皆無發布，取消則依個人因素取消辦理  
 
 #### 【訂金扣款百分比規定】  
