--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -13,9 +13,11 @@ images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "as
 #### 木棧板大小：約 3.1 M * 3.8 M      
 #### 木平台大小：約 12 M * 7 M   
 
-#### 【營位費用】
-- <span class="yellow">3 帳包區 ( 12 人以下) 費用：平日：2400元  假日：3000元  連續假日：3600元【連續假期限接三天兩夜或以上之預訂】  </span>
-- <span class="yellow">4 帳包區 ( 16 人以下) 費用：平日：3200元  假日：4000元  連續假日：4800元【連續假期限接三天兩夜或以上之預訂】  </span>
+<h4 class="yellow">【營位費用】</h4>
+<ul class="yellow">
+  <li>3 帳包區 ( 12 人以下) 費用：平日：2400元  假日：3000元  連續假日：3600元【連續假期限接三天兩夜或以上之預訂】</li>
+  <li>4 帳包區 ( 16 人以下) 費用：平日：3200元  假日：4000元  連續假日：4800元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
 
 #### 【營位說明】
 - 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)
@@ -24,6 +26,8 @@ images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "as
 - 平日可散賣，不一定要包區，請來電詢問
 - 該區提供兩組流理台、兩組衛浴、一台冰箱
 
-#### 【入營時間】
-- 入營時間：前日若無旅者紮營可於當日 10:00 後入場，連續假日或前日有旅客請於下午 13:00 後進場
-- 離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者紮營可於當日 10:00 後入場，連續假日或前日有旅客請於下午 13:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
