chore(roomPage): create campsite_2 page

--- a/_rooms/2022-10-07-campsite_2.md
+++ b/_rooms/2022-10-07-campsite_2.md
@@ -7,5 +7,26 @@ weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
 main_image: assets/images/campsite_2_main.jpg
-images: []
+images: ["assets/images/campsite_2_1.jpg", "assets/images/campsite_2_2.jpg", "assets/images/campsite_2_3.jpg", "assets/images/campsite_2_4.jpg", "assets/images/campsite_2_5.jpg", "assets/images/campsite_2_6.jpg", "assets/images/campsite_2_7.jpg", "assets/images/campsite_2_8.jpg", "assets/images/campsite_2_9.jpg"]
 ---
+
+#### 草地大小：約 19 M * 12 M，詳細大小請參考圖片      
+
+<h4 class="yellow">【營位費用】</h4>
+<ul class="yellow">
+  <li>3 帳包區 ( 12 人以下) 費用：平日：2400元  假日：3000元  連續假日：3600元【連續假期限接三天兩夜或以上之預訂】</li>
+  <li>4 帳包區 ( 16 人以下) 費用：平日：3200元  假日：4000元  連續假日：4800元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
+
+#### 【營位說明】
+- 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)
+- 該區草地皆屬於沒日之嶺使用空間，預訂前務必自行衡量大小空間 
+- 線上系統皆顯示4帳包區費用，如您只有3帳，僅收3帳費用(依現場帳數收費)
+- 平日可散賣，不一定要包區，請來電詢問
+- 該區提供兩組流理台、兩組衛浴、一台冰箱
+
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者紮營可於當日 10:00 後入場，連續假日或前日有旅客請於下午 13:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
