chore(roomPage): create campsite_3 page

--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -7,7 +7,7 @@ weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
 main_image: assets/images/campsite_1_main.jpg
-images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "assets/images/campsite_1_3.png", "assets/images/campsite_1_4.jpg", "assets/images/campsite_1_5.jpg", "assets/images/campsite_1_6.jpg", "assets/images/campsite_1_7.jpg", "assets/images/campsite_1_8.jpg", "assets/images/campsite_1_9.jpg", "assets/images/campsite_1_10.jpg", "assets/images/campsite_1_11.jpg", "assets/images/campsite_1_12.jpg", "assets/images/campsite_1_13.jpg", "assets/images/campsite_1_14.jpg", "assets/images/campsite_1_15.jpg", "assets/images/campsite_1_16.jpg", "assets/images/campsite_1_17.jpg"]
+images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "assets/images/campsite_1_3.png", "assets/images/campsite_1_4.jpg", "assets/images/campsite_1_5.jpg", "assets/images/campsite_1_6.jpg", "assets/images/campsite_1_7.jpg", "assets/images/campsite_1_8.jpg", "assets/images/campsite_1_9.jpg", "assets/images/campsite_1_10.jpg", "assets/images/campsite_1_11.jpg", "assets/images/campsite_1_12.jpg", "assets/images/campsite_1_13.jpg", "assets/images/campsite_1_14.jpg", "assets/images/campsite_1_15.jpg", "assets/images/campsite_1_16.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 木棧板大小：約 3.1 M * 3.8 M      
@@ -20,7 +20,7 @@ images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "as
 </ul>
 
 #### 【營位說明】
-- 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)
+- 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)，車輛不超過 4 台為限
 - 該區草地、棧板、平台皆屬於木棧板區使用空間，預訂前務必自行衡量大小空間 
 - 線上系統皆顯示4帳包區費用，如您只有3帳，僅收3帳費用(依現場帳數收費)
 - 平日可散賣，不一定要包區，請來電詢問
