--- a/_rooms/2022-10-07-campsite_2.md
+++ b/_rooms/2022-10-07-campsite_2.md
@@ -7,7 +7,7 @@ weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
 main_image: assets/images/campsite_2_main.jpg
-images: ["assets/images/campsite_2_1.jpg", "assets/images/campsite_2_2.jpg", "assets/images/campsite_2_3.jpg", "assets/images/campsite_2_4.jpg", "assets/images/campsite_2_5.jpg", "assets/images/campsite_2_6.jpg", "assets/images/campsite_2_7.jpg", "assets/images/campsite_2_8.jpg", "assets/images/campsite_2_9.jpg"]
+images: ["assets/images/campsite_2_1.jpg", "assets/images/campsite_2_2.jpg", "assets/images/campsite_2_3.jpg", "assets/images/campsite_2_4.jpg", "assets/images/campsite_2_5.jpg", "assets/images/campsite_2_6.jpg", "assets/images/campsite_2_7.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 草地大小：約 19 M * 12 M，詳細大小請參考圖片      
@@ -19,9 +19,9 @@ images: ["assets/images/campsite_2_1.jpg", "assets/images/campsite_2_2.jpg", "as
 </ul>
 
 #### 【營位說明】
-- 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)
+- 最多搭設帳篷 4 帳，人數不超過16人(加人 200 / 人清潔費用)，車輛不超過 4 台為限
 - 該區草地皆屬於沒日之嶺使用空間，預訂前務必自行衡量大小空間 
-- 線上系統皆顯示4帳包區費用，如您只有3帳，僅收3帳費用(依現場帳數收費)
+- 線上系統皆顯示 4 帳包區費用，如您只有 3 帳，僅收 3 帳費用(依現場帳數收費)
 - 平日可散賣，不一定要包區，請來電詢問
 - 該區提供兩組流理台、兩組衛浴、一台冰箱
 
