--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -7,5 +7,27 @@ weekday_price: 1600
 number_of_rooms: 1
 number_of_people: 8
 main_image: assets/images/campsite_3_main.jpg
-images: []
+images: ["assets/images/campsite_3_1.jpg", "assets/images/campsite_3_2.jpg", "assets/images/campsite_3_3.jpg", "assets/images/campsite_3_4.jpg", "assets/images/campsite_3_5.jpg", "assets/images/campsite_3_6.jpg", "assets/images/campsite_3_7.jpg", "assets/images/campsite_3_8.jpg", "assets/images/campsite_3_9.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
+
+#### 雨棚大小：約 11 M * 8 M
+#### 草地大小：約 12 M * 5 M
+
+<h4 class="yellow">【營位費用】</h4>
+<ul class="yellow">
+  <li>2 帳包區 ( 8 人以下) 費用：平日：1600 元  假日：2000 元  連續假日：2400 元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
+
+#### 【營位說明】
+- 最多搭設帳篷 2 帳，人數不超過 8 人(加人 200 / 人清潔費用)，車輛不超過 2 台為限
+- 該區草地及雨棚下皆屬於雨棚區使用空間，預訂前務必自行衡量大小空間 
+- 該區最少為 2 帳的費用，如您只有 1 帳，仍會收取 2 帳的費用
+- 平日可散賣，不一定要包區，請來電詢問
+- 該區提供一組流理台、兩組衛浴、約八人可用的桌椅
+- 該區的車輛需停在區域草地內，無法停至停車場
+
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者紮營可於當日 10:00 後入場，連續假日或前日有旅客請於下午 13:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
