chore(roomPage): create log_cabin_1 page

--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -7,5 +7,29 @@ weekday_price: 1000
 number_of_rooms: 5
 number_of_people: 4
 main_image: assets/images/log_cabin_1_main.jpg
-images: []
+images: ["assets/images/log_cabin_1_1.jpg", "assets/images/log_cabin_1_2.jpg", "assets/images/log_cabin_1_3.jpg", "assets/images/log_cabin_1_4.jpg", "assets/images/log_cabin_1_5.jpg", "assets/images/log_cabin_1_6.jpg", "assets/images/log_cabin_1_7.jpg", "assets/images/log_cabin_1_8.jpg", "assets/images/log_cabin_1_9.jpg", "assets/images/log_cabin_1_10.jpg", "assets/images/log_cabin_1_11.jpg", "assets/images/log_cabin_1_12.jpg",  "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
+
+#### 室內床板大小：約 2.7 M * 2.1 M
+#### 室外平台大小：約 3 M * 2 M
+#### 室外公共空間大小：約 7 M * 2.8 M
+
+<h4 class="yellow">【住宿費用】</h4>
+<ul class="yellow">
+  <li>1 間 ( 4 人以下) 費用：平日：1000 元  假日：1500 元  連續假日：1800 元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
+
+#### 【房位說明】
+- 最多入住 4 人(加人 200 / 人清潔費用)，車輛不超過 1 台為限
+- 房內尺寸如上所示，請自行衡量大小是否合適
+- 單間使用空間為室內及室外平台，不包含公共區域 
+- 如您計劃使用室外公共空間炊煮，請預定五間包區
+- 該區提供兩組公用流理台、兩組公用衛浴、一台公用冰箱
+- 每間房提供一張桌子及兩張椅子
+- 該區車輛需停放置停車場或是營區外，無法停至房間房邊
+
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者入住可於當日 13:00 後入場，連續假日或前日有旅客請於下午 15:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
