--- a/_rooms/2022-10-07-log_cabin_4.md
+++ b/_rooms/2022-10-07-log_cabin_4.md
@@ -7,5 +7,28 @@ weekday_price: 1000
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/log_cabin_4_main.jpg
-images: []
+images: ["assets/images/log_cabin_4/log_cabin_4_1.jpg", "assets/images/log_cabin_4/log_cabin_4_2.jpg", "assets/images/log_cabin_4/log_cabin_4_3.jpg", "assets/images/log_cabin_4/log_cabin_4_4.jpg", "assets/images/log_cabin_4/log_cabin_4_5.jpg", "assets/images/log_cabin_4/log_cabin_4_6.jpg", "assets/images/log_cabin_4/log_cabin_4_7.jpg", "assets/images/log_cabin_4/log_cabin_4_8.jpg", "assets/images/log_cabin_4/log_cabin_4_9.jpg", "assets/images/log_cabin_4/log_cabin_4_10.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
+
+#### 室內床板大小：約 3.4 M * 2.1 M
+#### 室外涼亭空間大小：約 3 M * 3 M
+
+<h4 class="yellow">【住宿費用】</h4>
+<ul class="yellow">
+  <li>1 間 ( 4 人以下) 費用：平日：1000 元  假日：1500 元  連續假日：1800 元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
+
+#### 【房位說明】
+- 最多入住 4 人(加人 200 / 人清潔費用)，車輛不超過 1 台為限
+- 房內尺寸如上所示，請自行衡量大小是否合適
+- 單間使用空間為室內及室外平台，請勿佔用依山之屋室外平台 
+- 如您計劃使用依山之屋室外平台炊煮，請一起預定靜、默房包區
+- 該區提供一組公用流理台、兩組公用衛浴、一台公用冰箱
+- 該房提供涼亭及一張桌子
+- 該房車輛可停至涼亭旁或是停至停車場
+
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者入住可於當日 13:00 後入場，連續假日或前日有旅客請於下午 15:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
