--- a/_rooms/2022-10-07-suite_1.md
+++ b/_rooms/2022-10-07-suite_1.md
@@ -7,5 +7,27 @@ weekday_price: 2400
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/suite_1_main.jpg
-images: []
+images: ["assets/images/suite_1/suite_1_1.png", "assets/images/suite_1/suite_1_2.jpg", "assets/images/suite_1/suite_1_3.jpg", "assets/images/suite_1/suite_1_4.jpg", "assets/images/suite_1/suite_1_5.jpg", "assets/images/suite_1/suite_1_6.jpg", "assets/images/suite_1/suite_1_7.jpg", "assets/images/suite_1/suite_1_8.jpg", "assets/images/suite_1/suite_1_9.jpg", "assets/images/suite_1/suite_1_10.jpg", "assets/images/suite_1/suite_1_11.jpg", "assets/images/suite_1/suite_1_12.jpg", "assets/images/suite_1/suite_1_13.jpg", "assets/images/suite_1/suite_1_14.jpg", "assets/images/suite_1/suite_1_15.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
+
+<h4 class="yellow">【住宿費用】</h4>
+<ul class="yellow">
+  <li>1 間 ( 4 人以下) 費用：平日：2400 元  假日：4000 元  連續假日：4600 元【連續假期限接三天兩夜或以上之預訂】</li>
+</ul>
+
+#### 【房位說明】
+- 最多入住 4 人，車輛不超過 1 台為限
+- 超過四人每人 400 元加人費，含寢具早餐
+- 該房戶外平台可供搭帳，搭帳每人清潔費 200 元，戶外搭帳無提供早餐寢具
+- 如您不需要提供早餐，可扣除每份 50 元房價
+- 如您不需要租用寢具，可扣除每人 50 元寢具費用
+- 炊煮請於室外平台，室內禁止炊煮
+- 該房提供一流理台、一組衛浴、房內電視、冷暖氣等設備
+- 該房無提供盥洗用具
+- 該房車輛需停至停車場或是營區外，無法停到房旁
+
+<h4 class="yellow">【入營時間】</h4>
+<ul class="yellow">
+  <li>入營時間：前日若無旅者入住可於當日 13:00 後入場，連續假日或前日有旅客請於下午 15:00 後進場</li>
+  <li>離營時間：使用時間至翌日中午 12:00 前拔營完畢並離場，若無旅者續住可延後至2點前退場(可現場詢問工作人員)</li>
+</ul>
