chore(roomPage): create suite_3 page

--- a/_rooms/2022-10-07-suite_1.md
+++ b/_rooms/2022-10-07-suite_1.md
@@ -22,7 +22,7 @@ images: ["assets/images/suite_1/suite_1_1.png", "assets/images/suite_1/suite_1_2
 - 如您不需要提供早餐，可扣除每份 50 元房價
 - 如您不需要租用寢具，可扣除每人 50 元寢具費用
 - 炊煮請於室外平台，室內禁止炊煮
-- 該房提供一流理台、一組衛浴、房內電視、冷暖氣等設備
+- 該房提供一流理台、一組衛浴、房內電視、吹風機、冷暖氣等設備
 - 該房無提供盥洗用具
 - 該房車輛需停至停車場或是營區外，無法停到房旁
 
