chore(resource): adjust rooms image logic

--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: campsite_3
 title: 密式雨棚區 ( 2 帳包區)
 standard_price: 2400
 holiday_price: 2000
@@ -7,7 +8,6 @@ weekday_price: 1600
 number_of_rooms: 1
 number_of_people: 8
 main_image: assets/images/campsite_3_main.jpg
-images: ["assets/images/campsite_3_1.jpg", "assets/images/campsite_3_2.jpg", "assets/images/campsite_3_3.jpg", "assets/images/campsite_3_4.jpg", "assets/images/campsite_3_5.jpg", "assets/images/campsite_3_6.jpg", "assets/images/campsite_3_7.jpg", "assets/images/campsite_3_8.jpg", "assets/images/campsite_3_9.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 雨棚大小：約 11 M * 8 M
