--- a/_rooms/2022-10-07-log_cabin_2.md
+++ b/_rooms/2022-10-07-log_cabin_2.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: log_cabin_2
 title: 依山之屋 - 靜 露營木屋
 standard_price: 1800
 holiday_price: 1500
@@ -7,7 +8,6 @@ weekday_price: 1000
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/log_cabin_2_main.jpg
-images: ["assets/images/log_cabin_2/log_cabin_2_1.jpg", "assets/images/log_cabin_2/log_cabin_2_2.jpg", "assets/images/log_cabin_2/log_cabin_2_3.jpg", "assets/images/log_cabin_2/log_cabin_2_4.jpg", "assets/images/log_cabin_2/log_cabin_2_5.jpg", "assets/images/log_cabin_2/log_cabin_2_6.jpg", "assets/images/log_cabin_2/log_cabin_2_7.jpeg", "assets/images/log_cabin_2/log_cabin_2_8.jpg", "assets/images/log_cabin_2/log_cabin_2_9.jpg",  "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 室內床板大小：約 2.7 M * 2.1 M
