--- a/_rooms/2022-10-07-suite_1.md
+++ b/_rooms/2022-10-07-suite_1.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: suite_1
 title: 近雲樓四人套房
 standard_price: 4600
 holiday_price: 4000
@@ -7,7 +8,6 @@ weekday_price: 2400
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/suite_1_main.jpg
-images: ["assets/images/suite_1/suite_1_1.png", "assets/images/suite_1/suite_1_2.jpg", "assets/images/suite_1/suite_1_3.jpg", "assets/images/suite_1/suite_1_4.jpg", "assets/images/suite_1/suite_1_5.jpg", "assets/images/suite_1/suite_1_6.jpg", "assets/images/suite_1/suite_1_7.jpg", "assets/images/suite_1/suite_1_8.jpg", "assets/images/suite_1/suite_1_9.jpg", "assets/images/suite_1/suite_1_10.jpg", "assets/images/suite_1/suite_1_11.jpg", "assets/images/suite_1/suite_1_12.jpg", "assets/images/suite_1/suite_1_13.jpg", "assets/images/suite_1/suite_1_14.jpg", "assets/images/suite_1/suite_1_15.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 <h4 class="yellow">【住宿費用】</h4>
