--- a/_rooms/2022-10-07-suite_3.md
+++ b/_rooms/2022-10-07-suite_3.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: suite_3
 title: 映月之屋雙人套房
 standard_price: 2800
 holiday_price: 2500
@@ -7,7 +8,6 @@ weekday_price: 1600
 number_of_rooms: 2
 number_of_people: 2
 main_image: assets/images/suite_3_main.jpg
-images: ["assets/images/suite_3/suite_3_1.jpg", "assets/images/suite_3/suite_3_2.jpg", "assets/images/suite_3/suite_3_3.jpg", "assets/images/suite_3/suite_3_4.jpg", "assets/images/suite_3/suite_3_5.jpg", "assets/images/suite_3/suite_3_6.jpg", "assets/images/suite_3/suite_3_7.jpg", "assets/images/suite_3/suite_3_8.jpg", "assets/images/suite_3/suite_3_9.jpg", "assets/images/suite_3/suite_3_10.jpg", "assets/images/suite_3/suite_3_11.jpg", "assets/images/suite_3/suite_3_12.jpg", "assets/images/suite_3/suite_3_13.jpg", "assets/images/suite_3/suite_3_14.jpg", "assets/images/suite_3/suite_3_15.jpg", "assets/images/suite_3/suite_3_16.jpg", "assets/images/suite_3/suite_3_17.jpg", "assets/images/suite_3/suite_3_18.jpg", "assets/images/suite_3/suite_3_19.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 <h4 class="yellow">【住宿費用】</h4>
