--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: campsite_1
 title: 櫻花之盡木棧板營 (3 ~ 4 帳包區)
 standard_price: 4800
 holiday_price: 4000
@@ -7,7 +8,6 @@ weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
 main_image: assets/images/campsite_1_main.jpg
-images: ["assets/images/campsite_1_1.png", "assets/images/campsite_1_2.png", "assets/images/campsite_1_3.png", "assets/images/campsite_1_4.jpg", "assets/images/campsite_1_5.jpg", "assets/images/campsite_1_6.jpg", "assets/images/campsite_1_7.jpg", "assets/images/campsite_1_8.jpg", "assets/images/campsite_1_9.jpg", "assets/images/campsite_1_10.jpg", "assets/images/campsite_1_11.jpg", "assets/images/campsite_1_12.jpg", "assets/images/campsite_1_13.jpg", "assets/images/campsite_1_14.jpg", "assets/images/campsite_1_15.jpg", "assets/images/campsite_1_16.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 木棧板大小：約 3.1 M * 3.8 M      
