--- a/_rooms/2022-10-07-campsite_2.md
+++ b/_rooms/2022-10-07-campsite_2.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: campsite_2
 title: 沒日之嶺草地營 (3 ~ 4 帳包區)
 standard_price: 4800
 holiday_price: 4000
@@ -7,7 +8,6 @@ weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
 main_image: assets/images/campsite_2_main.jpg
-images: ["assets/images/campsite_2_1.jpg", "assets/images/campsite_2_2.jpg", "assets/images/campsite_2_3.jpg", "assets/images/campsite_2_4.jpg", "assets/images/campsite_2_5.jpg", "assets/images/campsite_2_6.jpg", "assets/images/campsite_2_7.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 草地大小：約 19 M * 12 M，詳細大小請參考圖片      
