--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: log_cabin_1
 title: 觀山之屋露營木屋
 standard_price: 1800
 holiday_price: 1500
@@ -7,7 +8,6 @@ weekday_price: 1000
 number_of_rooms: 5
 number_of_people: 4
 main_image: assets/images/log_cabin_1_main.jpg
-images: ["assets/images/log_cabin_1_1.jpg", "assets/images/log_cabin_1_2.jpg", "assets/images/log_cabin_1_3.jpg", "assets/images/log_cabin_1_4.jpg", "assets/images/log_cabin_1_5.jpg", "assets/images/log_cabin_1_6.jpg", "assets/images/log_cabin_1_7.jpg", "assets/images/log_cabin_1_8.jpg", "assets/images/log_cabin_1_9.jpg", "assets/images/log_cabin_1_10.jpg", "assets/images/log_cabin_1_11.jpg", "assets/images/log_cabin_1_12.jpg",  "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 室內床板大小：約 2.7 M * 2.1 M
