--- a/_rooms/2022-10-07-log_cabin_3.md
+++ b/_rooms/2022-10-07-log_cabin_3.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: log_cabin_3
 title: 依山之屋 - 默 露營木屋
 standard_price: 1800
 holiday_price: 1500
@@ -7,7 +8,6 @@ weekday_price: 1000
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/log_cabin_3_main.jpg
-images: ["assets/images/log_cabin_3/log_cabin_3_1.jpg", "assets/images/log_cabin_3/log_cabin_3_2.jpg", "assets/images/log_cabin_3/log_cabin_3_3.jpg", "assets/images/log_cabin_3/log_cabin_3_4.jpg", "assets/images/log_cabin_3/log_cabin_3_5.jpg", "assets/images/log_cabin_3/log_cabin_3_6.jpg", "assets/images/log_cabin_3/log_cabin_3_7.jpg", "assets/images/log_cabin_3/log_cabin_3_8.jpg", "assets/images/log_cabin_3/log_cabin_3_9.jpg", "assets/images/log_cabin_3/log_cabin_3_10.jpg", "assets/images/log_cabin_3/log_cabin_3_11.jpg", "assets/images/log_cabin_3/log_cabin_3_12.jpeg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 室內床板大小：約 2.6 M * 2.1 M
