--- a/_rooms/2022-10-07-log_cabin_4.md
+++ b/_rooms/2022-10-07-log_cabin_4.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: log_cabin_4
 title: 依山之屋 - 沉 露營木屋
 standard_price: 1800
 holiday_price: 1500
@@ -7,7 +8,6 @@ weekday_price: 1000
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/log_cabin_4_main.jpg
-images: ["assets/images/log_cabin_4/log_cabin_4_1.jpg", "assets/images/log_cabin_4/log_cabin_4_2.jpg", "assets/images/log_cabin_4/log_cabin_4_3.jpg", "assets/images/log_cabin_4/log_cabin_4_4.jpg", "assets/images/log_cabin_4/log_cabin_4_5.jpg", "assets/images/log_cabin_4/log_cabin_4_6.jpg", "assets/images/log_cabin_4/log_cabin_4_7.jpg", "assets/images/log_cabin_4/log_cabin_4_8.jpg", "assets/images/log_cabin_4/log_cabin_4_9.jpg", "assets/images/log_cabin_4/log_cabin_4_10.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 #### 室內床板大小：約 3.4 M * 2.1 M
