--- a/_rooms/2022-10-07-suite_2.md
+++ b/_rooms/2022-10-07-suite_2.md
@@ -1,5 +1,6 @@
 ---
 layout: room
+symbol: suite_2
 title: 閲陽樓四人套房
 standard_price: 4600
 holiday_price: 4000
@@ -7,7 +8,6 @@ weekday_price: 2400
 number_of_rooms: 1
 number_of_people: 4
 main_image: assets/images/suite_2_main.jpg
-images: ["assets/images/suite_2/suite_2_1.jpg", "assets/images/suite_2/suite_2_2.jpg", "assets/images/suite_2/suite_2_3.jpg", "assets/images/suite_2/suite_2_4.jpg", "assets/images/suite_2/suite_2_5.jpg", "assets/images/suite_2/suite_2_6.jpg", "assets/images/suite_2/suite_2_7.jpg", "assets/images/suite_2/suite_2_8.jpg", "assets/images/suite_2/suite_2_9.jpg", "assets/images/suite_2/suite_2_10.jpg", "assets/images/suite_2/suite_2_11.jpg", "assets/images/suite_2/suite_2_12.jpg", "assets/images/suite_2/suite_2_13.jpg", "assets/images/suite_2/suite_2_14.jpg", "assets/images/suite_2/suite_2_15.jpg", "assets/images/suite_2/suite_2_16.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"]
 ---
 
 <h4 class="yellow">【住宿費用】</h4>
