--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -7,6 +7,7 @@ holiday_price: 2000
 weekday_price: 1600
 number_of_rooms: 1
 number_of_people: 8
+is_campsite: true
 main_image: assets/images/campsite_3_main.jpg
 ---
 
