--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -7,6 +7,7 @@ holiday_price: 1500
 weekday_price: 1000
 number_of_rooms: 5
 number_of_people: 4
+is_campsite: false
 main_image: assets/images/log_cabin_1_main.jpg
 ---
 
