chore(roomPage): update romm page info

--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -12,8 +12,8 @@ is_campsite: true
 main_image: assets/images/campsite_1_main.jpg
 ---
 
-#### 木棧板大小：約 3.1 M * 3.8 M      
-#### 木平台大小：約 12 M * 7 M   
+#### 木棧板大小：約 3.1 M * 3.8 M  ( 兩個 )   
+#### 木平台大小：約 12 M * 7 M ( 一個 )  
 
 <h4 class="yellow">【營位費用】</h4>
 <ul class="yellow">
