--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -27,8 +27,10 @@ main_image: assets/images/log_cabin_1_main.jpg
 - 單間使用空間為室內及室外平台，不包含公共區域 
 - 如您計劃使用室外公共空間炊煮，請預定五間包區
 - 該區提供兩組公用流理台、兩組公用衛浴、一台公用冰箱
-- 每間房提供一張桌子及兩張椅子
+- 每間房提供一張桌子及兩張椅子 ( 公用區另有板凳可借用 )
 - 該區車輛需停放置停車場或是營區外，無法停至房間房邊
+- 觀山之屋每間房戶外平台大小略有差異
+- 該區不提供挑房，依工作人員安排
 
 <h4 class="yellow">【入營時間】</h4>
 <ul class="yellow">
