--- a/_rooms/2022-10-07-log_cabin_2.md
+++ b/_rooms/2022-10-07-log_cabin_2.md
@@ -26,7 +26,7 @@ main_image: assets/images/log_cabin_2_main.jpg
 - 單間使用空間為室內及半個室外平台，若無連同默房一同預定請勿完全佔用室外平台 
 - 如您計劃使用室外所有公共空間炊煮，請一起預定默房包區
 - 該區提供一組公用流理台、兩組公用衛浴、一台公用冰箱
-- 每間房提供一張桌子及兩張椅子
+- 每間房提供一張桌子及兩張椅子 ( 公用區另有板凳可借用 )
 - 該區車輛需停放置停車場或是營區外，無法停在房間旁邊
 
 <h4 class="yellow">【入營時間】</h4>
