--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -13,7 +13,7 @@ main_image: assets/images/campsite_3_main.jpg
 ---
 
 #### 雨棚大小：約 11 M * 8 M
-#### 草地大小：約 12 M * 5 M
+#### 草地大小：約 12 M * 5 M，詳細大小請參考圖片  
 
 <h4 class="yellow">【營位費用】</h4>
 <ul class="yellow">
