--- a/_rooms/2022-10-07-log_cabin_4.md
+++ b/_rooms/2022-10-07-log_cabin_4.md
@@ -26,7 +26,7 @@ main_image: assets/images/log_cabin_4_main.jpg
 - 單間使用空間為室內及室外平台，請勿佔用依山之屋室外平台 
 - 如您計劃使用依山之屋室外平台炊煮，請一起預定靜、默房包區
 - 該區提供一組公用流理台、兩組公用衛浴、一台公用冰箱
-- 該房提供涼亭及一張桌子
+- 該房提供涼亭及一張桌子 ( 公用區另有板凳可借用 )
 - 該房車輛可停至涼亭旁或是停至停車場
 
 <h4 class="yellow">【入營時間】</h4>
