--- a/_rooms/2022-10-07-suite_3.md
+++ b/_rooms/2022-10-07-suite_3.md
@@ -20,8 +20,8 @@ main_image: assets/images/suite_3_main.jpg
 #### 【房位說明】
 - 最多入住 2 人，車輛不超過 1 台為限
 - 超過兩人每人 400 元加人費，含寢具早餐
-- 如您不需要提供早餐，可扣除每份 50 元房價
-- 如您不需要租用寢具，可扣除每人 50 元寢具費用
+- 如您不需要提供早餐，可扣除 100 元早餐費用
+- 如您不需要租用寢具，可扣除 100 元寢具費用
 - 炊煮請於室外平台，室內禁止炊煮
 - 該房提供一流理台、一組衛浴、房內電視、吹風機、冷暖氣等設備
 - 該房無提供盥洗用具
