chore(room): update room page config

--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -3,6 +3,7 @@ layout: room
 meta_title: '密式旅行露營區，雨棚露營區'
 symbol: campsite_3
 title: 密式雨棚區 ( 2 帳包區)
+short_title: 密式雨棚
 standard_price: 2400
 holiday_price: 2000
 weekday_price: 1600
