--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -3,6 +3,7 @@ layout: room
 meta_title: '密式旅行露營區，觀山之屋露營小木屋'
 symbol: log_cabin_1
 title: 觀山之屋露營木屋
+short_title: 觀山之屋
 standard_price: 1800
 holiday_price: 1500
 weekday_price: 1000
