--- a/_rooms/2022-10-07-suite_2.md
+++ b/_rooms/2022-10-07-suite_2.md
@@ -2,7 +2,8 @@
 layout: room
 meta_title: '密式旅行露營區，閲雲樓四人住宿套房'
 symbol: suite_2
-title: 閲陽樓四人套房
+title: 密式之頂閲陽樓四人套房
+short_title: 密式之頂
 standard_price: 4600
 holiday_price: 4000
 weekday_price: 2400
