--- a/_rooms/2022-10-07-suite_3.md
+++ b/_rooms/2022-10-07-suite_3.md
@@ -3,6 +3,7 @@ layout: room
 meta_title: '密式旅行露營區，映月之屋雙人住宿套房'
 symbol: suite_3
 title: 映月之屋雙人套房
+short_title: 映月之屋
 standard_price: 2800
 holiday_price: 2500
 weekday_price: 1600
