--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -3,6 +3,7 @@ layout: room
 meta_title: '密式旅行露營區，櫻花之盡木棧板露營區'
 symbol: campsite_1
 title: 櫻花之盡木棧板營 (3 ~ 4 帳包區)
+short_title: 櫻花之盡
 standard_price: 4800
 holiday_price: 4000
 weekday_price: 3200
