--- a/_rooms/2022-10-07-campsite_2.md
+++ b/_rooms/2022-10-07-campsite_2.md
@@ -3,6 +3,7 @@ layout: room
 meta_title: '密式旅行露營區，沒日之嶺草地露營區'
 symbol: campsite_2
 title: 沒日之嶺草地營 (3 ~ 4 帳包區)
+short_title: 沒日之嶺
 standard_price: 4800
 holiday_price: 4000
 weekday_price: 3200
