--- a/_rooms/2022-10-07-suite_1.md
+++ b/_rooms/2022-10-07-suite_1.md
@@ -2,7 +2,8 @@
 layout: room
 meta_title: '密式旅行露營區，近雲樓四人住宿套房'
 symbol: suite_1
-title: 近雲樓四人套房
+title: 密式之眼近雲樓四人套房
+short_title: 密式之眼
 standard_price: 4600
 holiday_price: 4000
 weekday_price: 2400
