--- a/_rooms/2022-10-07-suite_2.md
+++ b/_rooms/2022-10-07-suite_2.md
@@ -1,6 +1,6 @@
 ---
 layout: room
-meta_title: '密式旅行露營區，閲雲樓四人住宿套房'
+meta_title: '密式旅行露營區，閲陽樓四人住宿套房'
 symbol: suite_2
 title: 密式之頂閲陽樓四人套房
 short_title: 密式之頂
