chore(room): update campsite_3 info

--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -29,6 +29,7 @@ images: [
 - 最多搭設帳篷 2 帳，人數不超過 8 人(加人 200 / 人清潔費用)，車輛不超過 2 台為限
 - 該區草地及雨棚下皆屬於雨棚區使用空間，預訂前務必自行衡量大小空間 
 - 該區最少為 2 帳的費用，如您只有 1 帳，仍會收取 2 帳的費用
+- 該區可提供加帳，費用為當日單帳費用的半價，請自行衡量空間大小是否合適
 - 平日可散賣，不一定要包區，請來電詢問
 - 該區提供一組流理台、兩組衛浴、約八人可用的桌椅
 - 該區的車輛需停在區域草地內，無法停至停車場
