--- a/_rooms/2022-10-07-campsite_3.md
+++ b/_rooms/2022-10-07-campsite_3.md
@@ -13,7 +13,7 @@ is_campsite: true
 main_image: assets/images/campsite_3_main.jpg
 images: [
   "assets/images/campsite_3/campsite_3_1.jpg", "assets/images/campsite_3/campsite_3_2.jpg", "assets/images/campsite_3/campsite_3_3.jpg", "assets/images/campsite_3/campsite_3_4.jpg", "assets/images/campsite_3/campsite_3_5.jpg", "assets/images/campsite_3/campsite_3_6.jpg",
-  "assets/images/campsite_3/campsite_3_7.jpg", "assets/images/campsite_3/campsite_3_8.jpg", "assets/images/campsite_3/campsite_3_9.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/campsite_3/campsite_3_7.jpg", "assets/images/campsite_3/campsite_3_8.jpg", "assets/images/campsite_3/campsite_3_9.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
