--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -13,7 +13,7 @@ is_campsite: false
 main_image: assets/images/log_cabin_1_main.jpg
 images: [
   "assets/images/log_cabin_1/log_cabin_1_1.jpg", "assets/images/log_cabin_1/log_cabin_1_2.jpg", "assets/images/log_cabin_1/log_cabin_1_3.jpg", "assets/images/log_cabin_1/log_cabin_1_4.jpg", "assets/images/log_cabin_1/log_cabin_1_5.jpg", "assets/images/log_cabin_1/log_cabin_1_6.jpg",
-  "assets/images/log_cabin_1/log_cabin_1_7.jpg", "assets/images/log_cabin_1/log_cabin_1_8.jpg", "assets/images/log_cabin_1/log_cabin_1_9.jpg", "assets/images/log_cabin_1/log_cabin_1_10.jpg", "assets/images/log_cabin_1/log_cabin_1_11.jpg", "assets/images/log_cabin_1/log_cabin_1_12.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/log_cabin_1/log_cabin_1_7.jpg", "assets/images/log_cabin_1/log_cabin_1_8.jpg", "assets/images/log_cabin_1/log_cabin_1_9.jpg", "assets/images/log_cabin_1/log_cabin_1_10.jpg", "assets/images/log_cabin_1/log_cabin_1_11.jpg", "assets/images/log_cabin_1/log_cabin_1_12.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
