--- a/_rooms/2022-10-07-log_cabin_2.md
+++ b/_rooms/2022-10-07-log_cabin_2.md
@@ -13,7 +13,7 @@ is_campsite: false
 main_image: assets/images/log_cabin_2_main.jpg
 images: [
   "assets/images/log_cabin_1/log_cabin_2_1.jpg", "assets/images/log_cabin_1/log_cabin_2_2.jpg", "assets/images/log_cabin_1/log_cabin_2_3.jpg", "assets/images/log_cabin_1/log_cabin_2_4.jpg", "assets/images/log_cabin_1/log_cabin_2_5.jpg", "assets/images/log_cabin_1/log_cabin_2_6.jpg",
-  "assets/images/log_cabin_1/log_cabin_2_7.jpg", "assets/images/log_cabin_1/log_cabin_2_8.jpg", "assets/images/log_cabin_1/log_cabin_2_9.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/log_cabin_1/log_cabin_2_7.jpg", "assets/images/log_cabin_1/log_cabin_2_8.jpg", "assets/images/log_cabin_1/log_cabin_2_9.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
