--- a/_rooms/2022-10-07-log_cabin_3.md
+++ b/_rooms/2022-10-07-log_cabin_3.md
@@ -13,7 +13,7 @@ is_campsite: false
 main_image: assets/images/log_cabin_3_main.jpg
 images: [
   "assets/images/log_cabin_3/log_cabin_3_1.jpg", "assets/images/log_cabin_3/log_cabin_3_2.jpg", "assets/images/log_cabin_3/log_cabin_3_3.jpg", "assets/images/log_cabin_3/log_cabin_3_4.jpg", "assets/images/log_cabin_3/log_cabin_3_5.jpg", "assets/images/log_cabin_3/log_cabin_3_6.jpg",
-  "assets/images/log_cabin_3/log_cabin_3_7.jpg", "assets/images/log_cabin_3/log_cabin_3_8.jpg", "assets/images/log_cabin_3/log_cabin_3_9.jpg", "assets/images/log_cabin_3/log_cabin_3_10.jpg", "assets/images/log_cabin_3/log_cabin_3_11.jpg", "assets/images/log_cabin_3/log_cabin_3_12.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/log_cabin_3/log_cabin_3_7.jpg", "assets/images/log_cabin_3/log_cabin_3_8.jpg", "assets/images/log_cabin_3/log_cabin_3_9.jpg", "assets/images/log_cabin_3/log_cabin_3_10.jpg", "assets/images/log_cabin_3/log_cabin_3_11.jpg", "assets/images/log_cabin_3/log_cabin_3_12.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
