--- a/_rooms/2022-10-07-log_cabin_4.md
+++ b/_rooms/2022-10-07-log_cabin_4.md
@@ -13,7 +13,7 @@ is_campsite: false
 main_image: assets/images/log_cabin_4_main.jpg
 images: [
   "assets/images/log_cabin_4/log_cabin_4_1.jpg", "assets/images/log_cabin_4/log_cabin_4_2.jpg", "assets/images/log_cabin_4/log_cabin_4_3.jpg", "assets/images/log_cabin_4/log_cabin_4_4.jpg", "assets/images/log_cabin_4/log_cabin_4_5.jpg", "assets/images/log_cabin_4/log_cabin_4_6.jpg",
-  "assets/images/log_cabin_4/log_cabin_4_7.jpg", "assets/images/log_cabin_4/log_cabin_4_8.jpg", "assets/images/log_cabin_4/log_cabin_4_9.jpg", "assets/images/log_cabin_4/log_cabin_4_10.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/log_cabin_4/log_cabin_4_7.jpg", "assets/images/log_cabin_4/log_cabin_4_8.jpg", "assets/images/log_cabin_4/log_cabin_4_9.jpg", "assets/images/log_cabin_4/log_cabin_4_10.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
