--- a/_rooms/2022-10-07-campsite_2.md
+++ b/_rooms/2022-10-07-campsite_2.md
@@ -12,7 +12,7 @@ number_of_people: 16
 is_campsite: true
 main_image: assets/images/campsite_2_main.jpg
 images: [
-  "assets/images/campsite_2/campsite_2_1.jpg", "assets/images/campsite_2/campsite_2_2.jpg", "assets/images/campsite_2/campsite_2_3.jpg", "assets/images/campsite_2/campsite_2_4.jpg", "assets/images/campsite_2/campsite_2_5.jpg", "assets/images/campsite_2/campsite_2_6.jpg", "assets/images/campsite_2/campsite_2_7.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/campsite_2/campsite_2_1.jpg", "assets/images/campsite_2/campsite_2_2.jpg", "assets/images/campsite_2/campsite_2_3.jpg", "assets/images/campsite_2/campsite_2_4.jpg", "assets/images/campsite_2/campsite_2_5.jpg", "assets/images/campsite_2/campsite_2_6.jpg", "assets/images/campsite_2/campsite_2_7.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
