--- a/_rooms/2022-10-07-suite_1.md
+++ b/_rooms/2022-10-07-suite_1.md
@@ -14,7 +14,7 @@ main_image: assets/images/suite_1_main.jpg
 images: [
   "assets/images/suite_1/suite_1_1.jpg", "assets/images/suite_1/suite_1_2.jpg", "assets/images/suite_1/suite_1_3.jpg", "assets/images/suite_1/suite_1_4.jpg", "assets/images/suite_1/suite_1_5.jpg", "assets/images/suite_1/suite_1_6.jpg",
   "assets/images/suite_1/suite_1_7.jpg", "assets/images/suite_1/suite_1_8.jpg", "assets/images/suite_1/suite_1_9.jpg", "assets/images/suite_1/suite_1_10.jpg", "assets/images/suite_1/suite_1_11.jpg", "assets/images/suite_1/suite_1_12.jpg",
-  "assets/images/suite_1/suite_1_13.jpg", "assets/images/suite_1/suite_1_14.jpg", "assets/images/suite_1/suite_1_15.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/suite_1/suite_1_13.jpg", "assets/images/suite_1/suite_1_14.jpg", "assets/images/suite_1/suite_1_15.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
