--- a/_rooms/2022-10-07-suite_2.md
+++ b/_rooms/2022-10-07-suite_2.md
@@ -14,7 +14,7 @@ main_image: assets/images/suite_2_main.jpg
 images: [
   "assets/images/suite_2/suite_2_1.jpg", "assets/images/suite_2/suite_2_2.jpg", "assets/images/suite_2/suite_2_3.jpg", "assets/images/suite_2/suite_2_4.jpg", "assets/images/suite_2/suite_2_5.jpg", "assets/images/suite_2/suite_2_6.jpg",
   "assets/images/suite_2/suite_2_7.jpg", "assets/images/suite_2/suite_2_8.jpg", "assets/images/suite_2/suite_2_9.jpg", "assets/images/suite_2/suite_2_10.jpg", "assets/images/suite_2/suite_2_11.jpg", "assets/images/suite_2/suite_2_12.jpg",
-  "assets/images/suite_2/suite_2_13.jpg", "assets/images/suite_2/suite_2_14.jpg", "assets/images/suite_2/suite_2_15.jpg", "assets/images/suite_2/suite_2_16.jpg", "assets/images/map_info.jpg", "assets/images/booking_announcement.jpg"
+  "assets/images/suite_2/suite_2_13.jpg", "assets/images/suite_2/suite_2_14.jpg", "assets/images/suite_2/suite_2_15.jpg", "assets/images/suite_2/suite_2_16.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
 
