--- a/_rooms/2022-10-07-suite_2.md
+++ b/_rooms/2022-10-07-suite_2.md
@@ -9,6 +9,7 @@ holiday_price: 4000
 weekday_price: 2400
 number_of_rooms: 1
 number_of_people: 4
+order: 4
 is_campsite: false
 main_image: assets/images/suite_2_main.jpg
 images: [
