--- a/_rooms/2022-10-07-campsite_1.md
+++ b/_rooms/2022-10-07-campsite_1.md
@@ -9,6 +9,7 @@ holiday_price: 4000
 weekday_price: 3200
 number_of_rooms: 1
 number_of_people: 16
+order: 0
 is_campsite: true
 main_image: assets/images/campsite_1_main.jpg
 images: [
