--- a/_rooms/2022-10-07-suite_3.md
+++ b/_rooms/2022-10-07-suite_3.md
@@ -9,6 +9,7 @@ holiday_price: 2500
 weekday_price: 1600
 number_of_rooms: 2
 number_of_people: 2
+order: 5
 is_campsite: false
 main_image: assets/images/suite_3_main.jpg
 images: [
