--- a/_rooms/2022-10-07-log_cabin_1.md
+++ b/_rooms/2022-10-07-log_cabin_1.md
@@ -13,7 +13,7 @@ order: 9
 is_campsite: false
 main_image: assets/images/log_cabin_1/log_cabin_1_10.jpg
 images: [
-  "assets/images/log_cabin_1/log_cabin_1_1.jpg", "assets/images/log_cabin_1/log_cabin_1_2.jpg", "assets/images/log_cabin_1/log_cabin_1_3.jpg", "assets/images/log_cabin_1/log_cabin_1_4.jpg", "assets/images/log_cabin_1/log_cabin_1_5.jpg", "assets/images/log_cabin_1/log_cabin_1_6.jpg",
+  "assets/images/log_cabin_air_conditioner_2.jpg", "assets/images/log_cabin_1/log_cabin_1_1.jpg", "assets/images/log_cabin_1/log_cabin_1_2.jpg", "assets/images/log_cabin_1/log_cabin_1_3.jpg", "assets/images/log_cabin_1/log_cabin_1_4.jpg", "assets/images/log_cabin_1/log_cabin_1_5.jpg", "assets/images/log_cabin_1/log_cabin_1_6.jpg",
   "assets/images/log_cabin_1/log_cabin_1_7.jpg", "assets/images/log_cabin_1/log_cabin_1_8.jpg", "assets/images/log_cabin_1/log_cabin_1_9.jpg", "assets/images/log_cabin_1/log_cabin_1_10.jpg", "assets/images/log_cabin_1/log_cabin_1_11.jpg", "assets/images/log_cabin_1/log_cabin_1_12.jpg", "assets/images/map.jpg", "assets/images/booking_announcement.jpg"
 ]
 ---
@@ -25,6 +25,8 @@ images: [
 <h4 class="yellow">【住宿費用】</h4>
 <ul class="yellow">
   <li>1 間 ( 4 人以下) 費用：平日：1000 元  假日：1500 元  連續假日：1800 元【連續假期限接三天兩夜或以上之預訂】</li>
+  <li>房內另附投幣式冷暖氣，50 元 100 分鐘</li>
+  <li>自 114 年起，房費全面包含冷暖氣費，不需另外投幣，費用改為：平日：1200 元  假日：1700 元  連續假日：2000 元</li>
 </ul>
 
 #### 【房位說明】
