--- a/_rooms/2022-10-07-log_cabin_4.md
+++ b/_rooms/2022-10-07-log_cabin_4.md
@@ -24,7 +24,7 @@ images: [
 <h4 class="yellow">【住宿費用】</h4>
 <ul class="yellow">
   <li>1 間 ( 4 人以下) 費用：平日：1000 元  假日：1500 元  連續假日：1800 元【連續假期限接三天兩夜或以上之預訂】</li>
-  <li>房內另附投幣式冷暖氣，50 元 100 分鐘，或是 200 元吹到飽</li>
+  <li>114 年前房內另附投幣式冷暖氣，50 元 100 分鐘，或是 200 元吹到飽</li>
   <li>自 114 年起，房費全面包含冷暖氣費，不需另外投幣，費用改為：平日：1200 元  假日：1700 元  連續假日：2000 元</li>
 </ul>
 
